Fix CSS for spellbook-gallery-(wrap|scroll) (#2)
Kudos to
- https://stackoverflow.com/a/17159819
- https://stackoverflow.com/a/30423904

--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -154,6 +154,9 @@ main.bd-content #main-content .prev-next-bottom a:active {
 
 /*  .. list-table::
        :class: spellbook-gallery-wrap */
+table.spellbook-gallery-wrap.table {
+  display: block;
+}
 table.spellbook-gallery-wrap.table tbody {
   display: block;
 }
@@ -165,24 +168,22 @@ table.spellbook-gallery-wrap.table tbody tr {
 .spellbook-gallery-wrap.table p.caption {max-width: 450px;}
 .spellbook-gallery-wrap.perc90.table p.caption {max-width: 90%;}
 
+
 /*  .. list-table::
        :class: spellbook-gallery-scroll */
+table.spellbook-gallery-scroll.table {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
 table.spellbook-gallery-scroll.table tbody {
-  display: grid;
-  justify-content: center;
+  display: table;
+  width: 100%;
 }
-table.spellbook-gallery-scroll.table tr {
-  display: unset;
-  position: sticky;
-  left: 0;
-}
-main.bd-content #main-content .spellbook-gallery-scroll.table div.figure {
-/* trigger horizontal scrolling for overflow by keeping each plot in a div
-    sized according to its content's size */
-  width: max-content;
+table.spellbook-gallery-scroll.table img {
+  max-width: fit-content;
 }
 .spellbook-gallery-scroll td {border-top: none;}
-/* .spellbook-gallery img {border: solid 2px rgba(0,113,188,0.8);} */
 
 
 
